Tweak CSS to avoid visible links within an H1

--- a/doc/mkws-doc.css
+++ b/doc/mkws-doc.css
@@ -8,7 +8,7 @@ h1, h2, h3, h4 {
     font-family: Gill Sans, "Gillius ADF", Gillius, GilliusADF, Verdana, Sans-Serif;
 }
 
-h2 a, h3 a, h4 a, div#TOC a {
+h1 a, h2 a, h3 a, h4 a, div#TOC a {
     color: #68a;
     text-decoration: none;
 }
